--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 			<div class="circle">
 				<div class="circle__block-1">
 					<div class="circle-block-1__text">Lorem Ipsum is simply dummy text</div>
-					<div class="circle-block-1__img"></div>
+					<div class="circle-block-1__img">
+						<img src="img/test-image.jpg" alt="test-image">
+					</div>
 				</div>
 	            <div class="circle__block-2">
 	            	<div class="circle-block-2__text">Lorem Ipsum is simply dummy text</div>
@@ -47,20 +49,26 @@
 	</header>
 
 	<!-- main -->
-	<div class="container">
-		<div class="section clearfix">
+	<div class="section">
+		<div class="container clearfix">
 			<main class="main">
 				<div class="promo clearfix">
-					<div class="promo__photo"></div>
-					<div class="promo__heading">
-						<div class="promo__heading-title">Lorem Ipsum is simply dummy text </div>
-						<div class="promo__heading-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div>
+					<div class="promo__photo"><img src="img/test-image.jpg" alt="test-image"></div>
+					<div class="promo__content">
+						<div class="promo__title">Lorem Ipsum is simply dummy text </div>
+						<div class="promo__text">
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+						</div>
 					</div>
 					<div class="promo__socials">
-						<div class="social-item__name">Like</div>
-						<div class="social-item__value">557</div>
-						<div class="social-item__name">Share</div>
-						<div class="social-item__value">351</div>
+						<div class="social-item">
+							<div class="social-item__name">Like</div>
+							<div class="social-item__value">557</div>
+						</div>
+						<div class="social-item">
+							<div class="social-item__name">Share</div>
+							<div class="social-item__value">351</div>
+						</div>
 					</div>
 				</div>
 				<div class="product clearfix">
@@ -90,8 +98,10 @@
 
 	<!-- footer -->
 	<footer class="footer">
-		<div class="container">
-			<div class="copyright">© 2014 Company Name. All rights reserved.</div>
+		<div class="section section--footer">
+			<div class="container">
+				<div class="copyright">© 2014 Company Name. All rights reserved.</div>
+			</div>
 		</div>
 	</footer>
 	
